# automated-integrated-tests

./: .env  .gitignore  README.adoc  requirements.txt
configs/: aliases.yaml  field_map.yaml  sap_codes.yaml
data/dumps/: DUMP_IP41_SAPLIWP3_100_20260302_131951.txt  DUMP_IP41_SAPLIWP3_100_20260304_132317.txt  (+57 more)
sap_core_next/: MIGRATION_PLAN.md  README.md  pyproject.toml
sap_core_next/config/: default.yaml
sap_core_next/scripts/: run_engine.py
sap_core_next/src/sap_core_next/: __init__.py
sap_core_next/src/sap_core_next/adapters/ai/: http_ai_assistant.py  noop_ai.py
sap_core_next/src/sap_core_next/adapters/sap/: legacy_bridge_gateway.py  win32com_gateway.py
sap_core_next/src/sap_core_next/adapters/spreadsheet/: openpyxl_sink.py  openpyxl_source.py
sap_core_next/src/sap_core_next/config/: settings.py
sap_core_next/src/sap_core_next/core/: context.py  engine.py  logging.py  models.py  policies.py
sap_core_next/src/sap_core_next/plugins/pm/: plugin.py
sap_core_next/src/sap_core_next/ports/: ai_assistant.py  evidence_store.py  plugin.py  result_sink.py  sap_gateway.py  scenario_source.py
sap_core_next/src/sap_core_next/registry/: plugin_registry.py
sap_core_next/src/sap_core_next/services/: evidence_service.py
sap_core_next/tests/: test_engine.py  test_policies.py  test_registry.py
src/: config.py  error_repository.py  evidence.py  ia_integrator.py  main.py  param_enricher.py  params_parser.py  planilha_local.py  runner.py  sap_automation.py  sap_codes_provider.py  sap_screen_dump.py  status_builder.py  teste_sap_connection.py
(+26 files in other folders)
